[package]
name = "ft6236"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/embedded-drivers/ft6236"
documentation = "https://docs.rs/ft6236"
homepage = "https://github.com/embedded-drivers/ft6236"
categories = ["hardware-interfaces", "no-std", "embedded-hal"]
description = "embedded-hal driver for the FT6236/FT6206/FT6236U touch controller"
keywords = ["embedded", "touch", "touchscreen", "ft6236", "ft6206"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
defmt = { version = "0.3.4", optional = true }
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.10" }
